@@ -306,6 +306,12 @@ Release 2.6.1 - UNRELEASED
     HDFS-7425. NameNode block deletion logging uses incorrect appender.
     (cnauroth)
 
+    HDFS-4882. Prevent the Namenode's LeaseManager from looping forever in
+    checkLeases (Ravi Prakash via Colin P. McCabe)
+
+    HDFS-7489. Incorrect locking in FsVolumeList#checkDirs can hang datanodes
+    (Noah Lorang via Colin P. McCabe)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
